--- a/client/src/pages/ChatPage/ChatWindow/ChatBody/ChatContent/ChatContent.custome.css
+++ b/client/src/pages/ChatPage/ChatWindow/ChatBody/ChatContent/ChatContent.custome.css
@@ -25,6 +25,10 @@
 }
 
 .list-chat::-webkit-scrollbar-track {
+    background-color: #fff;
+}
+
+.dark .list-chat::-webkit-scrollbar-track {
     background-color: #1d1e24;
 }
 
