--- a/client/src/pages/ChatPage/ChatWindow/ChatBody/ChatContent/ChatContent.custome.css
+++ b/client/src/pages/ChatPage/ChatWindow/ChatBody/ChatContent/ChatContent.custome.css
@@ -32,6 +32,10 @@
     background-color: #1d1e24;
 }
 
+#user:hover .timer {
+    display: block;
+}
+
 @media (max-width: 740px) {
     .list-chat::-webkit-scrollbar-track {
         background-color: #fff;
